milestone6/style.css
/* ... */
.semi-truck-image {
    width: 100%;
    max-width: 200px;
    border-radius: 5px;
    grid-row: 1 / span 2;
    margin-right: 0;
}

.truck-block-text {
    grid-column: 2/4;
    font-size: 18px;
    line-height: 1.5;
}

.truck-block-text p{
    font-weight: 550;
}

.equipment-block {
    grid-row: 3/4;
    grid-column: 1/-1;
    display: grid; 
    grid-template-columns: 200px 1fr;
    grid-template-rows: auto auto;
    align-items: center;
    justify-content: center;
    gap: 20px;
    background-color: #1A82F1;
    border-radius: 5px;
    padding: 20px;
    max-width: 975px;
    margin: auto;
    align-self: center;
    justify-self: center;
}

.equipment-image{
    width: 100%;
    max-width: 200px;
    border-radius: 5px;
    grid-row: 1 / span 2; 
}

.equipment-block-text {
    font-size: 18px;
    line-height: 1.5;
    grid-column: 2/4;
}

.equipment-block-text p{
    font-weight: 550;
}

.service-button{
    grid-column: 1/-1;
    grid-row: 4;
    display: inline-block;
    justify-self: center;
    background-color: #66E0FF;
    color: #fff;
    font-weight: 800;
    font-size: 20px;
    padding: 12px 20px;
    border-radius: 7px;
    margin-bottom: 15px;
    text-transform: uppercase;
    text-decoration: none;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.footbar{
    grid-column: 1/-1;
    grid-row: 5;
    background-color: rgba(0,123,255);
}

footer{
    display: grid;
    grid-template-columns: 1fr auto;
    align-items: center;
    height: 45px;
    grid-column: 2/8;
    grid-row: 5;
    background-color: rgba(0,123,255);
    color: #fff;
    padding: 5px 20px;
}

.left-text{
    grid-column: 1;
    font-weight: bold;
    font-family: Inter;
}

.right-text{
    font-family: Inter;
    font-size: small;
    display: flex;
    flex-direction: column;
    text-align: right;
}

.about_block{
    grid-row: 1;
    grid-column: 1/-1;
    align-items: center;
    justify-content: center;
    gap: 20px;
    background-color: #1A82F1;
    border-radius: 5px;
    padding: 20px;
    max-width: 975px;
    margin: auto;
    align-self: center;
    justify-self: center;
}

.about_block h2{
    justify-self: center;
    margin-bottom: 10px;
}

.about_block p{
    font-size: 18px;
    font-weight: 550;
    color: white;
    line-height: 1.35;
}

.quote_block_2{
    grid-row: 2;
    grid-column: 1/-1;
    background-color: #1A82F1;
    border-radius: 5px;
    height: 500px;
    width: 975px;
    padding: 30px;
    margin-bottom: 25px;
    align-self: center;
    justify-self: center;
    text-align: center;
}

.quote_block_2 h1{
    margin-bottom: 10px;
}

.quote-form-2 {
    grid-column: 1/-1;
    display: flex;
    flex-direction: column;
}

.quote-form-2 input, 
.quote-form-2 select {
    padding: 10px;
    margin-bottom: 20px;
    background-color: #f0f0f0;
    border: none;
}

.quote-form-2 select{
    color: #333;
}

.quote-block select option[disabled] {
    color: #888;
}

.quote-block select option:not([disabled]) {
    color: #333;
}

.quote-form-2 input[type="submit"] {
    background-color: #66E0FF;
    color: white;
    border: none;
    font-family: Inter;
    border-radius: 7px;
    padding: 12px 20px;
    font-weight: 800;
    font-size: 16px;
    cursor: pointer;
    text-transform: uppercase;
    margin-top: 10px;
    align-self: center;
    width: auto;
    min-width: 145px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.page_blocks{
    grid-column: 1/-1;
    grid-row: 1/-1;
    width: 925px;
    justify-self: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 1.75rem;
    margin-bottom: 10px;
    border-radius: 5px;
    background-color: rgba(0, 123, 255);
}

.page_blocks img{
    width: 450px;
    height: auto;
    padding: 10px;
    border-radius: 10px;
}


.service_block{
    grid-row: 1;
    grid-column: 3/5;
    background-color: #1A82F1;
    border-radius: 5px;
    height: 315px;
    max-width: 450px;
    padding: 30px;
    align-self: center;
    justify-self: center;
    text-align: center;
}

.service_block h2{
    font-size: 24px;
    font-weight: 800;
    margin-bottom: 10px;
    color: white;
}

.service_block p{
    font-size: 17px;
    font-weight: 550;
    color: white;
    line-height: 1.35;
    max-width: 400px;
}

.fleet_block{
    grid-row: 2;grid-column: 1/-1;
    align-items: center; 
    justify-content: center; 
    gap: 20px; 
    background-color: #1A82F1; 
    border-radius: 5px; 
    padding: 20px;
    width: 900px;
    align-self: center;
    justify-self: center;
}

.fleet_block h2{
    margin-bottom: 8px; 
    justify-self: center; 
}

.fleet_block p{
    font-size: 17px; 
    font-weight: 550; 
    color: white; 
    line-height: 1.35; 
    max-width: 800px;
}
/* ... */

